--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,73 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+/*MainMenu*/
+#menu{
+  background-color:darkcyan;
+  height: 60px;
+  width: 100%;
+  margin:0%;
+  display: flex; 
+  align-items:flex-start;
+  
+}
+#title
+{
+  position: relative;
+  top: 10px;
+  left: 40px;
+  margin: 0%;
+  color: azure;
+  font-family: Raleway, sans-serif;
+}
+#dostavka
+{
+  width: 50px;
+  height: 50px;
+}
+#info-1
+{
+  height: 90px;
+  width: 100%;
+  border-bottom: 3px solid #47c9af;
+  margin-right: -15px;
+  margin-left: 1px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  
+}
+#adv-1
+{   
+  padding-top: 15px;
+  padding-left: 150px;
+  width: 450px;
+  margin: 0;
+}
+#adv-2
+{
+  padding-top: 15px;
+  padding-left: 150px;
+  width: 400px;
+  margin: 0;   
+}
+#adv-3
+{
+  padding-top: 15px;
+  padding-left: 150px;
+  width: 300px;
+  margin: 0;   
+}
+#topsales
+{   
+  height: 900px;
+  width: 100%;
+  background-color:#47c9af;
+  margin-top: 0px;
+}
+
+
+
 /*MENU*/
 #cssmenu,
 #cssmenu ul,
@@ -145,5 +213,174 @@
   transform: translate(-50%, -50%);
 }
 
+/*ContactUs*/
+#contactus
+{
+  width: 350px;
+  height: 500px;
+  color: black;
+  border: 1px solid gainsboro;
+  border-radius: 3px;
+  position:absolute;
+  left:38%;
+  top:25%;
+  background-color: #fff; 
+  
+}
 
+#contact
+{
+  width: 100%;
+  height: 400px;
+  
+  background-color:  #272723;
+}
 
+/*SignIn*/
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: darkcyan;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: #43A047;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.form .message a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.form .register-form {
+  display: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container .info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+.container .info span a {
+  color: #000000;
+  text-decoration: none;
+}
+.container .info span .fa {
+  color: #EF3B3A;
+}
+body {
+  background: #47c9af; /* fallback for old browsers */
+  background: -webkit-linear-gradient(right, #47c9af, #47c9af);
+  background: -moz-linear-gradient(right, #47c9af, #47c9af);
+  background: -o-linear-gradient(right, #47c9af, #47c9af);
+  background: linear-gradient(to left, #47c9af, #47c9af);
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;      
+}
+
+/*some*/
+#c-us
+{   
+    width: 300px;
+    height: 30px;
+    margin-left: 25px;
+    margin-top: 20px;
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    font-size:12px;
+    color: gray;
+}
+#c-us-text
+{   
+    width: 300px;
+    height: 150px;
+    padding-bottom: 10px; 
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 12px;
+    color:gray;
+    padding-left: 10px;
+}
+::-webkit-input-placeholder { 
+    color: gray;
+    font-size: 15px;
+    font-family: fantasy;
+    
+    
+}
+#sub-mit
+{
+    width:300px;
+    height: 50px;
+    padding-bottom: 10px; 
+    
+    margin-left: 25px;
+    margin-top: 20px;
+    font-size: 20px;
+    color:gray;
+    background-color: #47c9af;
+}
+
+/*registration*/
